Update profile information and content

--- a/mariam-khediri.github.io-main/Html/About.html
+++ b/mariam-khediri.github.io-main/Html/About.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio | Mariem khedhiri </title>
+  <title>Portfolio | Eya Guerdelly </title>
   <link rel="stylesheet" href="../CSS/About.css">
 
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -171,29 +171,42 @@
     <h2>My Academic Journey</h2>
     <div class="timeline">
       <div class="timeline-item">
-        <img src="../img/enetcom.jpg" alt="ENET'COM" class="timeline-image">
+        <img src="../img/ensi.jpeg" alt="ENSI" class="timeline-image">
         <div class="timeline-content">
-          <h3>2021 - 2024</h3>
-          <h4>Engineering Degree in Industrial Computer Science</h4>
-          <p><strong>National School of Electronics and Telecommunication of Sfax, Tunisia </strong></p>
+          <h3>September 2024 - May 2025</h3>
+          <h4>Research Master's in Data Science</h4>
+          <p><strong>National School of Computer Science (ENSI), Manouba, Tunisia</strong></p>
+          <p>Advanced research focus on 3D-4D Computer Vision, Neural Machine Learning, Multidimensional Signal Processing, Medical Imaging, Active Contours and Invariants Statistics, Registration.</p>
         </div>
       </div>
 
       <div class="timeline-item">
-        <img src="../img/tuc.png" alt="Technische Universitat Chemnitz" class="timeline-image" >
+        <img src="../img/ensi.jpeg" alt="ENSI" class="timeline-image">
         <div class="timeline-content">
-          <h3>2.2024 - 9.2024</h3>
-          <h4>Exchange Student for the summer semester</h4>
-          <p><strong>Technische Universitat Chemnitz, Germany</strong></p>
+          <h3>September 2022 - May 2025</h3>
+          <h4>AI & Software Engineering Degree</h4>
+          <p><strong>National School of Computer Science (ENSI), Manouba, Tunisia</strong></p>
+          <p>Comprehensive program covering Software Engineering, Data Structures and Algorithms, Database Systems, Operating Systems (Linux), UML Modeling, Big Data, Data Mining, Deep Learning, Deep Reinforcement Learning, GenAI, Multi-Agent Systems.</p>
         </div>
       </div>
 
       <div class="timeline-item">
         <img src="../img/ipeim.jpg" alt="IPEIM" class="timeline-image">
         <div class="timeline-content">
-          <h3>2019 - 2021</h3>
-          <h4>Pre-Engineering Degree</h4>
-          <p><strong>Preparatory Institute for Engineering Studies of Monastir, Tunisia</strong></p>
+          <h3>September 2020 - June 2022</h3>
+          <h4>National Diploma in Mathematics and Physics</h4>
+          <p><strong>Preparatory Institute for Engineering Studies of Monastir (IPEIM), Tunisia</strong></p>
+          <p>Ranked 212/1831 nationally in preparatory engineering entrance examination. Intensive program in advanced mathematics, physics, and computer science fundamentals.</p>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <img src="../img/lycee-khniss.jpeg" alt="Baccalaureate" class="timeline-image">
+        <div class="timeline-content">
+          <h3>2020</h3>
+          <h4>Baccalaureate in Mathematics with Great Honors </h4>
+          <p><strong> Khniss High school, Monastir, Tunisia</strong></p>
+          <p>Graduated with great honors,specializing in mathematics with exceptional academic performance (15.64/20 ).</p>
         </div>
       </div>
       
