--- a/mariam-khediri.github.io-main/Html/Interests.html
+++ b/mariam-khediri.github.io-main/Html/Interests.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Mariem Khedhiri</title>
+  <title>Portfolio | Eya Guerdelly</title>
   <link rel="stylesheet" href="../CSS/About.css">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <link rel="icon" href="../img/ME.png" type="image/x-icon">
