--- a/mariam-khediri.github.io-main/Html/Projects.html
+++ b/mariam-khediri.github.io-main/Html/Projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio | Mariem Khedhiri</title>
+  <title>Portfolio | Eya Guerdelly</title>
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -46,44 +46,48 @@
       <!-- Abusive Context Detection Pipeline -->
 <div class="project-card">
    <div class="project-content">
-       <h3>Abusive Context Detection Pipeline</h3>
-       <p>Designing a multi-modal pipeline to detect abusive content across text, images, and audio. Phase 1 includes data preprocessing, modality-specific feature extraction, model training, and evaluation. Phase 2 will integrate a hybrid CNN-LSTM architecture to improve classification performance.</p>
+       <h3>AI-Powered Speech Analysis Tool</h3>
+       <p>Recruitment platform eliminating English accent bias through objective speech analysis and automated candidate evaluation. Advanced NLP and speech processing for fair recruitment practices.</p>
        <div class="project-tech">
           <span>Python</span>
-          <span>Deep Learning</span>
-          <span>Text/Image/Audio Processing</span>
-          <span>CNN-LSTM</span>
-          <span>Kaggle Dataset</span>
+          <span>NLP</span>
+          <span>Speech Processing</span>
+          <span>Machine Learning</span>
+          <span>Whisper API</span>
+          <span>Automated Evaluation</span>
        </div>
    </div>
 </div>
 
 
-      <!-- Facebook Posts Collector with MongoDB -->
+      <!-- Smart Parking Vision System -->
 <div class="project-card">
    <div class="project-content">
-       <h3>Facebook Posts Collector with MongoDB</h3>
-       <p>Developed a Python3 connector using the Meta Graph API to collect posts (text, images, and comments) from a personal Facebook Business Page based on a defined topic. Filtered results are stored in a MongoDB database for further analysis.</p>
+       <h3>Smart Parking Vision: Automated Vehicle Detection and Space Management Using YOLOv8</h3>
+       <p>Computer vision system using YOLOv8 for real-time vehicle detection, parking space monitoring, and traffic flow optimization. Advanced AI-powered parking management solution.</p>
        <div class="project-tech">
           <span>Python</span>
-          <span>Meta Graph API</span>
-          <span>MongoDB</span>
-          <span>REST API</span>
+          <span>YOLOv8</span>
+          <span>Computer Vision</span>
+          <span>Real-time Detection</span>
+          <span>Traffic Optimization</span>
        </div>
    </div>
 </div>
 
 
-      <!-- Chatbot with Contextual Memory -->
+      <!-- Agentic AI Platform -->
       <div class="project-card">
          <div class="project-content">
-             <h3>Chatbot with Contextual Memory</h3>
-             <p>Built an interactive chatbot using Hugging Face Transformers and Gradio that remembers previous conversation turns, powered by the FLAN-T5 language model.</p>
+             <h3>Agentic AI Platform for Task Management Automation</h3>
+             <p>Advanced AI platform with voice/text support, automated Jira integration, OCR capabilities, and RAG systems for intelligent task management and workflow automation.</p>
              <div class="project-tech">
                 <span>Python</span>
-                <span>Transformers</span>
-                <span>Gradio</span>
-                <span>LLMs</span>
+                <span>Langgraph</span>
+                <span>Langchain</span>
+                <span>RAG</span>
+                <span>OCR</span>
+                <span>Jira Integration</span>
               </div>
           </div>
       </div>
