--- a/mariam-khediri.github.io-main/Html/Skills.html
+++ b/mariam-khediri.github.io-main/Html/Skills.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio | Mariem Khedhiri </title>
+  <title>Portfolio | Eya Guerdelly </title>
   <link rel="stylesheet" href="../CSS/Skills.css">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -174,7 +174,10 @@
       <div class="skills-list">
         <span>Machine Learning</span>
         <span>Deep Learning</span>
+        <span>Natural Language Processing</span>
         <span>Computer Vision</span>
+        <span>Neural Networks</span>
+        <span>Agentic AI</span>
         <span>TensorFlow</span>
         <span>PyTorch</span>
       </div>
@@ -188,10 +191,11 @@
       </div>
       <div class="skills-list">
         <span>Python</span>
+        <span>R</span>
+        <span>SQL</span>
         <span>JavaScript</span>
-        <span>PHP</span>
         <span>Java</span>
-        <span>C/C++</span>
+        <span>C++</span>
         <span>MATLAB</span>
       </div>
     </div>
