--- a/mariam-khediri.github.io-main/index.html
+++ b/mariam-khediri.github.io-main/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
+    <title>Eya Guerdelly - AI Engineer Portfolio</title>
     <!-- Redirection vers home.html dans le dossier Html -->
     <meta http-equiv="refresh" content="0; url=Html/home.html" />
-    <link rel="icon" href="../Mariem-khedhiri.portfolio1/img/professional-portrait.png" sizes="64x64" type="image/png">
+    <meta name="description" content="Eya Guerdelly - AI Engineer & Data Science Researcher specializing in Machine Learning, NLP, and Computer Vision">
+    <link rel="icon" href="mariam-khediri.github.io-main/img/eya-guerdelly-portrait.png" sizes="64x64" type="image/png">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="../Mariem-khedhiri.portfolio1/img/professional-portrait.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Mariem-khedhiri.portfolio1/img/professional-portrait.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../Mariem-khedhiri.portfolio1/img/professional-portrait.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="mariam-khediri.github.io-main/img/eya-guerdelly-portrait.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="mariam-khediri.github.io-main/img/eya-guerdelly-portrait.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="mariam-khediri.github.io-main/img/eya-guerdelly-portrait.png">
     <link rel="manifest" href="/site.webmanifest">
 
 
