Update profile information and content

--- a/mariam-khediri.github.io-main/Html/About.html
+++ b/mariam-khediri.github.io-main/Html/About.html
@@ -209,9 +209,163 @@
           <p>Graduated with great honors,specializing in mathematics with exceptional academic performance (15.64/20 ).</p>
         </div>
       </div>
-      
 
-      
+      <!-- CERTIFICATIONS & ACHIEVEMENTS SECTION -->
+      <h2>Certifications & Achievements</h2>
+      <div class="timeline">
+        <!-- 2025 Certifications -->
+        <div class="timeline-item">
+          <img src="../img/linkedin-learning.png" alt="LinkedIn Learning" class="timeline-image">
+          <div class="timeline-content">
+            <h3>March 2025</h3>
+            <h4>Agentic AI Fundamentals: Architectures, Frameworks, and Applications</h4>
+            <p><strong>LinkedIn Learning</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/linkedin-learning.png" alt="LinkedIn Learning" class="timeline-image">
+          <div class="timeline-content">
+            <h3>March 2025</h3>
+            <h4>Build AI Agents and Chatbots with LangGraph</h4>
+            <p><strong>LinkedIn Learning</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/nvidia.png" alt="NVIDIA" class="timeline-image">
+          <div class="timeline-content">
+            <h3>January 2025</h3>
+            <h4>Generative AI Explained</h4>
+            <p><strong>NVIDIA</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/datacamp.png" alt="DataCamp" class="timeline-image">
+          <div class="timeline-content">
+            <h3>January 2025</h3>
+            <h4>Introduction to TensorFlow in Python</h4>
+            <p><strong>DataCamp</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/datacamp.png" alt="DataCamp" class="timeline-image">
+          <div class="timeline-content">
+            <h3>January 2025</h3>
+            <h4>Advanced Deep Learning with Keras</h4>
+            <p><strong>DataCamp</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/datacamp.png" alt="DataCamp" class="timeline-image">
+          <div class="timeline-content">
+            <h3>January 2025</h3>
+            <h4>Image Modeling with Keras</h4>
+            <p><strong>DataCamp</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/datacamp.png" alt="DataCamp" class="timeline-image">
+          <div class="timeline-content">
+            <h3>January 2025</h3>
+            <h4>Supervised Learning with scikit-learn</h4>
+            <p><strong>DataCamp</strong></p>
+          </div>
+        </div>
+
+        <!-- 2024 Certifications -->
+        <div class="timeline-item">
+          <img src="../img/nvidia.png" alt="NVIDIA" class="timeline-image">
+          <div class="timeline-content">
+            <h3>December 2024</h3>
+            <h4>Applications of AI for Predictive Maintenance</h4>
+            <p><strong>NVIDIA</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/datacamp.png" alt="DataCamp" class="timeline-image">
+          <div class="timeline-content">
+            <h3>November 2024</h3>
+            <h4>Data Warehousing Concepts</h4>
+            <p><strong>DataCamp</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/datacamp.png" alt="DataCamp" class="timeline-image">
+          <div class="timeline-content">
+            <h3>November 2024</h3>
+            <h4>Data Transformation in PowerBI</h4>
+            <p><strong>DataCamp</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/datacamp.png" alt="DataCamp" class="timeline-image">
+          <div class="timeline-content">
+            <h3>October 2024</h3>
+            <h4>Introduction to Kubernetes</h4>
+            <p><strong>DataCamp</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/kodekloud.png" alt="KodeKloud" class="timeline-image">
+          <div class="timeline-content">
+            <h3>January 2024</h3>
+            <h4>Docker Certificate</h4>
+            <p><strong>KodeKloud</strong></p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/coursera.png" alt="Coursera" class="timeline-image">
+          <div class="timeline-content">
+            <h3>January 2024</h3>
+            <h4>DevOps Essentials</h4>
+            <p><strong>Coursera</strong></p>
+          </div>
+        </div>
+
+        <!-- 2023 Achievement -->
+        <div class="timeline-item">
+          <img src="../img/award.png" alt="Bronze Award" class="timeline-image">
+          <div class="timeline-content">
+            <h3>December 2023</h3>
+            <h4>🥉 Bronze Award - 3rd Prize</h4>
+            <p><strong>WebCure Hackathon at ISI</strong></p>
+            <p>Won 3rd prize for the development of MekechWahdek website</p>
+          </div>
+        </div>
+
+        <!-- 2022 Certifications -->
+        <div class="timeline-item">
+          <img src="../img/opus-lab.png" alt="Opus Lab" class="timeline-image">
+          <div class="timeline-content">
+            <h3>January 2022 - June 2022</h3>
+            <h4>Full Stack Web Development Certificate</h4>
+            <p><strong>Opus Lab</strong></p>
+            <p>MongoDB, Express, React and Node.js (MERN Stack)</p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <img src="../img/linkedin-learning.png" alt="LinkedIn Learning" class="timeline-image">
+          <div class="timeline-content">
+            <h3>June 2022</h3>
+            <h4>Web Development Certificate</h4>
+            <p><strong>LinkedIn Learning</strong></p>
+            <p>HTML, CSS, JavaScript</p>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </section>
   <script>
