--- a/mariam-khediri.github.io-main/Html/Professional_Experience.html
+++ b/mariam-khediri.github.io-main/Html/Professional_Experience.html
@@ -169,19 +169,19 @@
 <!-- SAP Technical Support Engineer -->
 
   <div class="timeline-item">
-    <img src="../img/focus-corp.png" alt="Focus Corporation" class="timeline-image">
+    <img src="../img/focus1.png" alt="Focus Corporation" class="timeline-image">
     <div class="timeline-content">
-      <h3>February 2025 - June 2025</h3>
-      <h4>AI Engineer Intern</h4>
+      <h3>February 2025 - July 2025</h3>
+      <h4>AI & Software Engineer Intern</h4>
       <p><strong>Focus Corporation, Tunis, Tunisia</strong></p>
       <p>Developed cutting-edge Agentic AI platform for task management automation with advanced voice/text support and seamless Jira integration.</p>
 
       <ul class="accomplishments">
         <li>Developed Agentic AI platform for task management automation</li>
-        <li>Built Task Management Assistant with Gemini integration featuring voice/text support</li>
-        <li>Implemented automated Jira management system</li>
-        <li>Integrated advanced OCR and document processing capabilities</li>
-        <li>Deployed RAG (Retrieval-Augmented Generation) systems for enhanced AI responses</li>
+        <li>Built Task Management Assistant with Gemini integration featuring voice/text support and automated Jira management</li>
+        <li>Implemented advanced OCR and document processing capabilities using Tesseract</li>
+        <li>Deployed RAG (Retrieval-Augmented Generation) systems with FileSearch for enhanced AI responses</li>
+        <li>Integrated MCP (Model Context Protocol) for improved AI model communication</li>
       </ul>
 
       <div class="tech-tags">
@@ -189,14 +189,23 @@
         <span>Langgraph</span>
         <span>Langchain</span>
         <span>Docling</span>
+        <span>FileSearch</span>
         <span>RAG</span>
         <span>OCR</span>
         <span>Tesseract</span>
         <span>LLMs</span>
+        <span>ML</span>
         <span>NLP</span>
+        <span>MCP</span>
+        <span>Nextjs</span>
         <span>Angular</span>
         <span>FastAPI</span>
         <span>Supabase</span>
+        <span>Docker Compose</span>
+        <span>Microservices architecture</span>
+        <span>CI/CD pipeline</span>
+        <span>Project Management</span>
+        <span>JIRA</span>
       </div>
     </div>
   </div>
@@ -206,21 +215,47 @@
     <!-- graduation project -->
 
       <div class="timeline-item">
-        <img src="../img/elyos-digital.png" alt="ElyosDigital" class="timeline-image">
+        <img src="../img/focus1.png" alt="Focus Corporation" class="timeline-image">
+        <div class="timeline-content">
+          <h3>June 2024 - August 2024</h3>
+          <h4>Software Engineer Intern</h4>
+          <p><strong>Focus Corporation, Tunis, Tunisia</strong></p>
+          <p>Developed automated dashboard generation platform for SAP Support teams with Docker Compose deployment, creating performance dashboards and KPI monitoring tools to enhance transparency and operational efficiency.</p>
+
+          <ul class="accomplishments">
+            <li>Developed automated dashboard generation platform for SAP Support teams with Docker Compose deployment</li>
+            <li>Created performance dashboards and KPI monitoring tools to enhance transparency and operational efficiency</li>
+            <li>Implemented scalable infrastructure using containerization technologies</li>
+            <li>Integrated comprehensive support management systems</li>
+            <li>Enhanced team productivity through automated reporting solutions</li>
+          </ul>
+
+          <div class="tech-tags">
+            <span>SAP ServiceNow</span>
+            <span>Angular</span>
+            <span>Spring Boot</span>
+            <span>Java</span>
+            <span>MySQL</span>
+            <span>Docker</span>
+            <span>Docker Compose</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- DL internship Leoni -->
+      <div class="timeline-item">
+        <img src="../img/elyos.png" alt="ElyosDigital" class="timeline-image">
         <div class="timeline-content">
           <h3>June 2023 - August 2023</h3>
           <h4>Software Engineer Intern</h4>
           <p><strong>ElyosDigital, Monastir, Tunisia</strong></p>
           <p>Developed comprehensive mobile and web applications with focus on dynamic content delivery and database management for educational platforms.</p>
-
           <ul class="accomplishments">
-            <li>Developed a mobile movie application using Flutter and Dart</li>
-            <li>Implemented API integration for dynamic content delivery</li>
-            <li>Built backend and managed databases for online education platform</li>
-            <li>Used Laravel and phpMyAdmin for robust database management</li>
-            <li>Created responsive and user-friendly mobile interfaces</li>
+            <li>Developed a mobile movie application using Flutter and Dart with API integration for dynamic content delivery</li>
+            <li>Built backend and managed databases for an online education platform using Laravel and phpMyAdmin</li>
+            <li>Implemented responsive user interfaces and seamless API integrations</li>
+            <li>Enhanced user experience through optimized mobile application performance</li>
           </ul>
-
           <div class="tech-tags">
             <span>Flutter</span>
             <span>Dart</span>
@@ -233,73 +268,10 @@
         </div>
       </div>
 
-      <!-- DL internship Leoni -->
-      <div class="timeline-item">
-        <img src="src=../img/leoni.png" alt="Leoni" class="timeline-image">
-        <div class="timeline-content">
-          <h3>June 2023 - July 2023</h3>
-          <h4>Deep Learning Developer Intern</h4>
-          <p><strong>Leoni, Tunisia</strong></p>
-          <p>Built and optimized deep learning models for facial recognition and emotion detection in real-time environments.</p>
-          <ul class="accomplishments">
-            <li>Developed CNN models with TensorFlow for employee identification</li>
-            <li>Implemented real-time image processing using OpenCV</li>
-            <li>Performed testing and tuning for model performance enhancement</li>
-          </ul>
-          <div class="tech-tags">
-            <span>TensorFlow</span>
-            <span>OpenCV</span>
-            <span>Python</span>
-            <span>Jupyter</span>
-            <span>Deep Learning</span>
-          </div>
-        </div>
-      </div>
-
-      <!-- sparks foundation internship ML developer -->
-      <div class="timeline-item">
-        <img src="../img/sparks-foundation.png" alt="Sparks Foundation" class="timeline-image">
-        <div class="timeline-content">
-          <h3>June 2023 - July 2023</h3>
-          <h4>Machine Learning Developer Intern</h4>
-          <p><strong>The Sparks Foundation, Singapore (Remote)</strong></p>
-          <p>Worked on real-world datasets to build hybrid predictive models for financial and sentiment analysis.</p>
-          <ul class="accomplishments">
-            <li>Performed EDA on 'SampleSuperstore' dataset to uncover key business insights</li>
-            <li>Developed models for stock price prediction and sentiment classification</li>
-            <li>Applied both supervised and unsupervised learning techniques</li>
-          </ul>
-          <div class="tech-tags">
-            <span>Machine Learning</span>
-            <span>Clustering</span>
-            <span>Regression</span>
-            <span>Python</span>
-          </div>
-        </div>
-      </div>
 
 
-      <!-- IoT & Satellite Communication Internship -->
-      <div class="timeline-item">
-        <img src="../img/tunsat-1.jpg" alt="Tunsat 1 project" class="timeline-image">
-        <div class="timeline-content">
-          <h3>July 2022 - August 2022</h3>
-          <h4>IoT Developer Intern</h4>
-          <p><strong>TUNSA and ESPITA – Tunsat1 Satellite Project, Tunisia</strong></p>
-          <p>Developed robust microcontroller communication protocols and satellite system components for CubeSat missions in collaboration with JAXA and UNOOSA.</p>
-          <ul class="accomplishments">
-            <li>Created communication protocol using STM32 microcontrollers and I2C</li>
-            <li>Designed redundancy backup system for critical CubeSat subsystems</li>
-            <li>Presented technical work to JAXA and UNOOSA committees</li>
-          </ul>
-          <div class="tech-tags">
-            <span>STM32</span>
-            <span>CubeMX</span>
-            <span>I2C</span>
-            <span>Embedded Systems</span>
-          </div>
-        </div>
-      </div>
+
+
 
     </div>
   </section>
