--- a/mariam-khediri.github.io-main/Html/Skills.html
+++ b/mariam-khediri.github.io-main/Html/Skills.html
@@ -165,131 +165,184 @@
   </div>
 
   <div class="skills-container">
-    <!-- DATA SCIENCE & AI -->
+    <!-- AI & MACHINE LEARNING -->
     <div class="skill-category">
       <div class="category-header">
         <i class='bx bx-brain'></i>
-        <h2>DATA SCIENCE & AI</h2>
+        <h2>AI & MACHINE LEARNING</h2>
       </div>
       <div class="skills-list">
+        <span>Langgraph</span>
+        <span>CrewAI</span>
+        <span>Langchain</span>
         <span>Machine Learning</span>
-        <span>Deep Learning</span>
-        <span>Natural Language Processing</span>
-        <span>Computer Vision</span>
-        <span>Neural Networks</span>
-        <span>Agentic AI</span>
-        <span>TensorFlow</span>
-        <span>PyTorch</span>
+        <span>NLP</span>
+        <span>ML</span>
+        <span>DL</span>
+        <span>LLMs</span>
+        <span>Whisper API</span>
       </div>
     </div>
 
-    <!-- PROGRAMMING LANGUAGES -->
+    <!-- PROGRAMMING LANGUAGES & FRAMEWORKS -->
     <div class="skill-category">
       <div class="category-header">
         <i class='bx bx-code-curly'></i>
-        <h2>PROGRAMMING LANGUAGES</h2>
+        <h2>PROGRAMMING LANGUAGES & FRAMEWORKS</h2>
       </div>
       <div class="skills-list">
         <span>Python</span>
-        <span>R</span>
-        <span>SQL</span>
-        <span>JavaScript</span>
         <span>Java</span>
-        <span>C++</span>
-        <span>MATLAB</span>
+        <span>TypeScript</span>
+        <span>Angular</span>
+        <span>Spring Boot</span>
+        <span>FastAPI</span>
       </div>
     </div>
 
-    <!-- BIG DATA & DATABASES -->
+    <!-- DATABASES & TOOLS -->
     <div class="skill-category">
       <div class="category-header">
         <i class='bx bx-data'></i>
-        <h2>BIG DATA & DATABASES</h2>
+        <h2>DATABASES & TOOLS</h2>
       </div>
       <div class="skills-list">
-        <span>Spark</span>
         <span>MySQL</span>
-        <span>PL/SQL</span>
-        <span>SQL</span>
-      </div>
-    </div>
-
-    <!-- DATA VISUALIZATION -->
-    <div class="skill-category">
-      <div class="category-header">
-        <i class='bx bx-bar-chart-alt-2'></i>
-        <h2>DATA VISUALIZATION</h2>
-      </div>
-      <div class="skills-list">
-        <span>Matplotlib</span>
-        <span>Seaborn</span>
-        <span>Power BI</span>
-      </div>
-    </div>
-
-    <!-- DEVELOPMENT TOOLS -->
-    <div class="skill-category">
-      <div class="category-header">
-        <i class='bx bx-wrench'></i>
-        <h2>DEVELOPMENT TOOLS</h2>
-      </div>
-      <div class="skills-list">
-        <span>VS Code</span>
-        <span>Eclipse</span>
-        <span>Jupyter</span>
-        <span>Google Colab</span>
+        <span>Supabase</span>
+        <span>Docker</span>
+        <span>Docker Compose</span>
         <span>Git</span>
         <span>GitHub</span>
+        <span>VS Code</span>
       </div>
     </div>
 
-    <!-- EMBEDDED SYSTEMS -->
+    <!-- MOBILE & WEB DEVELOPMENT -->
     <div class="skill-category">
       <div class="category-header">
-        <i class='bx bx-chip'></i>
-        <h2>EMBEDDED SYSTEMS</h2>
+        <i class='bx bx-mobile-alt'></i>
+        <h2>MOBILE & WEB DEVELOPMENT</h2>
       </div>
       <div class="skills-list">
-        <span>STM32</span>
-        <span>Arduino</span>
-        <span>Raspberry Pi4</span>
+        <span>Flutter</span>
+        <span>Dart</span>
+        <span>Laravel</span>
+        <span>phpMyAdmin</span>
+        <span>APIs</span>
+        <span>REST APIs</span>
       </div>
     </div>
 
-    <!-- SOFT SKILLS -->
+    <!-- SPECIALIZED TECHNOLOGIES -->
+    <div class="skill-category">
+      <div class="category-header">
+        <i class='bx bx-cog'></i>
+        <h2>SPECIALIZED TECHNOLOGIES</h2>
+      </div>
+      <div class="skills-list">
+        <span>OCR</span>
+        <span>Tesseract</span>
+        <span>Docling</span>
+        <span>FileSearch</span>
+        <span>RAG</span>
+        <span>MCP</span>
+        <span>SAP ServiceNow</span>
+        <span>YOLOv8</span>
+      </div>
+    </div>
+
+    <!-- SOFT SKILLS & LANGUAGES -->
     <div class="skill-category">
       <div class="category-header">
         <i class='bx bx-user-voice'></i>
-        <h2>SOFT SKILLS</h2>
+        <h2>SOFT SKILLS & LANGUAGES</h2>
       </div>
       <div class="skills-list">
         <span>Problem-solving</span>
-        <span>Debugging</span>
         <span>Team Collaboration</span>
-        <span>Agile (Scrum)</span>
+        <span>Research & Development</span>
+        <span>Project Management</span>
+        <span>Arabic (Native)</span>
+        <span>French (Fluent)</span>
+        <span>English (Fluent)</span>
       </div>
     </div>
   </div>
 
   <!-- Certifications Section -->
   <div class="certifications-section">
-    <h2>Certifications</h2>
+    <h2>Certifications & Achievements</h2>
     <div class="certifications-grid">
+      <!-- 2025 Certifications -->
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
-        <h3>IBM Data Science Professional Certificate (2025)</h3>
+        <h3>Agentic AI Fundamentals: Architectures, Frameworks, and Applications – LinkedIn Learning (03/2025)</h3>
       </div>
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
-        <h3>Scrum for Ops and DevOps Fundamentals – SCRUMstudy (2024)</h3>
+        <h3>Build AI Agents and Chatbots with LangGraph – LinkedIn Learning (03/2025)</h3>
       </div>
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
-        <h3>CNA 1: Introduction to Networks – Cisco (2023)</h3>
+        <h3>Generative AI Explained – NVIDIA (01/2025)</h3>
       </div>
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
-        <h3>Machine Learning Specialization – DeepLearning.AI (2023)</h3>
+        <h3>Introduction to TensorFlow in Python – DataCamp (01/2025)</h3>
+      </div>
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Advanced Deep Learning with Keras – DataCamp (01/2025)</h3>
+      </div>
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Image Modeling with Keras – DataCamp (01/2025)</h3>
+      </div>
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Supervised Learning with scikit-learn – DataCamp (01/2025)</h3>
+      </div>
+
+      <!-- 2024 Certifications -->
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Applications of AI for Predictive Maintenance – NVIDIA (12/2024)</h3>
+      </div>
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Data Warehousing Concepts – DataCamp (11/2024)</h3>
+      </div>
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Data Transformation in PowerBI – DataCamp (11/2024)</h3>
+      </div>
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Introduction to Kubernetes – DataCamp (10/2024)</h3>
+      </div>
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Docker Certificate – KodeKloud (01/2024)</h3>
+      </div>
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>DevOps Essentials – Coursera (01/2024)</h3>
+      </div>
+
+      <!-- 2023 Achievement -->
+      <div class="certification-card">
+        <i class='bx bx-trophy'></i>
+        <h3>🥉 Bronze Award: 3rd Prize for MekechWahdek Website – WebCure Hackathon at ISI (12/2023)</h3>
+      </div>
+
+      <!-- 2022 Certifications -->
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Full Stack Development: MongoDB, Express, React, Node.js – Opus Lab (01/2022-06/2022)</h3>
+      </div>
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Web Development: HTML, CSS, JavaScript – LinkedIn Learning (06/2022)</h3>
       </div>
     </div>
   </div>
