--- a/mariam-khediri.github.io-main/Html/home.html
+++ b/mariam-khediri.github.io-main/Html/home.html
@@ -372,7 +372,7 @@
     </div>
     
     <div class="hero-image">
-      <img src="../img/portfolio.jpg" alt="Eya Guerdelly - AI Engineer" class="profile-portrait">
+      <img src="../img/eya.png" alt="Eya Guerdelly - AI & Software Engineer" class="profile-portrait">
     </div>
   </section>
 
