Update profile information and content

--- a/mariam-khediri.github.io-main/Html/Skills.html
+++ b/mariam-khediri.github.io-main/Html/Skills.html
@@ -256,7 +256,7 @@
   <div class="certifications-section">
     <h2>Certifications & Achievements</h2>
     <div class="certifications-grid">
-      <!-- 2025 Certifications -->
+      <!-- March 2025 -->
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
         <h3>Agentic AI Fundamentals: Architectures, Frameworks, and Applications – LinkedIn Learning (03/2025)</h3>
@@ -265,6 +265,8 @@
         <i class='bx bx-certificate'></i>
         <h3>Build AI Agents and Chatbots with LangGraph – LinkedIn Learning (03/2025)</h3>
       </div>
+
+      <!-- January 2025 -->
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
         <h3>Generative AI Explained – NVIDIA (01/2025)</h3>
@@ -286,11 +288,13 @@
         <h3>Supervised Learning with scikit-learn – DataCamp (01/2025)</h3>
       </div>
 
-      <!-- 2024 Certifications -->
+      <!-- December 2024 -->
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
         <h3>Applications of AI for Predictive Maintenance – NVIDIA (12/2024)</h3>
       </div>
+
+      <!-- November 2024 -->
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
         <h3>Data Warehousing Concepts – DataCamp (11/2024)</h3>
@@ -299,10 +303,21 @@
         <i class='bx bx-certificate'></i>
         <h3>Data Transformation in PowerBI – DataCamp (11/2024)</h3>
       </div>
+
+      <!-- October 2024 -->
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
         <h3>Introduction to Kubernetes – DataCamp (10/2024)</h3>
       </div>
+
+      <!-- June 2024 -->
+      <div class="certification-card">
+        <i class='bx bx-trophy'></i>
+        <h3>🥈 Second Place: Promising Women Program Hackathon – Deloitte & US Embassy Tunisia (06/2024)</h3>
+        <p>Led development of web application for startup ECUME using Angular and Spring Boot, empowering women entrepreneurs during 24-hour hackathon</p>
+      </div>
+
+      <!-- January 2024 -->
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
         <h3>Docker Certificate – KodeKloud (01/2024)</h3>
@@ -312,20 +327,22 @@
         <h3>DevOps Essentials – Coursera (01/2024)</h3>
       </div>
 
-      <!-- 2023 Achievement -->
+      <!-- December 2023 -->
       <div class="certification-card">
         <i class='bx bx-trophy'></i>
         <h3>🥉 Bronze Award: 3rd Prize for MekechWahdek Website – WebCure Hackathon at ISI (12/2023)</h3>
       </div>
 
-      <!-- 2022 Certifications -->
-      <div class="certification-card">
-        <i class='bx bx-certificate'></i>
-        <h3>Full Stack Development: MongoDB, Express, React, Node.js – Opus Lab (01/2022-06/2022)</h3>
-      </div>
+      <!-- June 2022 -->
       <div class="certification-card">
         <i class='bx bx-certificate'></i>
         <h3>Web Development: HTML, CSS, JavaScript – LinkedIn Learning (06/2022)</h3>
+      </div>
+
+      <!-- January-June 2022 -->
+      <div class="certification-card">
+        <i class='bx bx-certificate'></i>
+        <h3>Full Stack Development: MongoDB, Express, React, Node.js – Opus Lab (01/2022-06/2022)</h3>
       </div>
     </div>
   </div>
