--- a/mariam-khediri.github.io-main/Html/home.html
+++ b/mariam-khediri.github.io-main/Html/home.html
@@ -340,7 +340,7 @@
       <h4 style="color: white">Hello, I'm</h4>
       <h1>Eya<span style="color: white"> Guerdelly</span></h1>
       <p>
-        AI Engineer & Data Science Researcher with expertise in Machine Learning, NLP, and Computer Vision.<br>
+        AI Engineer & Data Science Researcher with expertise in Machine Learning, NLP, GenAI , Agentic AI and Computer Vision.<br>
         Passionate about developing intelligent systems and agentic AI platforms for automation.<br>
         Seeking <strong>full-time opportunities</strong> to build cutting-edge AI solutions and drive innovation.
       </p>
