Update profile information and content

--- a/eya-guerdelly.github.io-main/Html/Projects.html
+++ b/eya-guerdelly.github.io-main/Html/Projects.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../CSS/Pages.css">
   <link rel="stylesheet" href="../CSS/Projects.css">
-  <link rel="icon" href="../img/ME.png" type="image/x-icon">
+  <link rel="icon" href="../img/eya.png" type="image/x-icon">
   <style>
     /* Ajout spécifique pour le header des projets */
     .projects-header h1 {
@@ -24,7 +24,7 @@
 <body>
   <header>
     <a href="#" class="logo">Portfolio <span>.O</span></a>
-    <div class="bx bx-menu" id="menu-icon"></div>
+    <div class="bx bx-eyanu" id="menu-icon"></div>
     <ul class="navlist" id="navlist">
       <li><a href="../Html/home.html">Home</a></li>
       <li><a href="../Html/About.html">About</a></li>
