--- a/eya-guerdelly.github.io-main/Html/home.html
+++ b/eya-guerdelly.github.io-main/Html/home.html
@@ -349,7 +349,7 @@
         <a href="https://www.linkedin.com/in/eya-guerdelly/" target="_blank" aria-label="LinkedIn">
           <i class="ri-linkedin-fill"></i>
         </a>
-        <a href="https://github.com/eya-guerdelly" target="_blank" aria-label="GitHub">
+        <a href="https://github.com/eyaguerdelly140" target="_blank" aria-label="GitHub">
           <i class="ri-github-fill"></i>
         </a>
         <a href="mailto:guerdellyeya@gmail.com" target="_blank" aria-label="Email">
